--- a/0-example.html
+++ b/0-example.html
@@ -1,1 +1,1 @@
-Their are many people with poor grammer. Remember that conetn is King.
+There are many people with poor grammar. Remember that content is king. Add another sentence to practice your shortcut keys.Add another sentence to practice your shortcut keys.Add another sentence to practice your shortcut keys.Add another sentence to practice your shortcut keys.
